--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,14 +15,14 @@ body {
   background: #ccc;
 }
  
-.nav ul {
+#top-nav ul {
   list-style: none;
   background-color: #444;
   text-align: center;
   padding: 0;
   margin: 0;
 }
-.nav li {
+#top-nav li {
   font-family: 'Oswald', sans-serif;
   font-size: 1.2em;
   line-height: 40px;
@@ -30,25 +30,25 @@ body {
   border-bottom: 1px solid #888;
 }
  
-.nav a {
+#top-nav a {
   text-decoration: none;
   color: #fff;
   display: block;
   transition: .3s background-color;
 }
  
-.nav a:hover {
+#top-nav a:hover {
   background-color: #005f5f;
 }
  
-.nav a.active {
+#top-nav a.active {
   background-color: #fff;
   color: #444;
   cursor: default;
 }
  
 @media screen and (min-width: 600px) {
-  .nav li {
+  #top-nav li {
     width: 120px;
     border-bottom: none;
     height: 50px;
@@ -57,7 +57,7 @@ body {
   }
  
   /* Option 1 - Display Inline */
-  .nav li {
+  #top-nav li {
     display: inline-block;
     margin-right: -4px;
   }
