--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,8 @@
 
+html{	
+	font-size: 62.5%;
+}
+
 * 
 {
 	font-size: 24px
@@ -28,6 +32,10 @@ aside {
   width: 150px; 
 	height: 200px;
 }*/
+
+#act-button{
+
+}
 
 #side-pic{ 
 	border-radius: 50%;
