--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,11 +1,11 @@
 
 html{	
 	font-size: 62.5%;
+	font-size: 1rem;
 }
 
 * 
 {
-	font-size: 24px
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
@@ -20,6 +20,7 @@ hr{
 }
 
 p {
+	font-size: 1.5rem;
   color: black;
 }
 
