nav bar fixed postion

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -54,6 +54,7 @@ body {
   text-align: center;
   padding: 0;
   margin: 0;
+  position: fixed;
 }
 #top-nav li {
   font-family: 'Oswald', sans-serif;
